--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     background-color: var(--black-base);
     color: var(--white-base);
     border-radius: 10px;
+    box-shadow: 9px 9px 17px -1px rgba(0,0,0,0.48);
 }
 
 .main-form h1 {
